prusti-tests/tests/verify/fail/no-annotations/multiple-errors.rs
fn foo() {
    
}

fn bar() {
    
}

fn main() {
    
}
